# BusinessManager

./: .gitignore  CMakeLists.txt  ProjectManager.sh  README.md  architecture.drawio
config_files/debug/: CMakeLists.txt
config_files/release/: CMakeLists.txt
config_files/unit_tests/: CMakeLists.txt  conanfile.txt
include/: GeneralTypes.hpp
include/model/: CBillsModel.hpp  CCustomers.hpp  CCustomersModel.hpp  ICrudModel.hpp
include/view/: CBillsView.hpp  CCustomersView.hpp  CMainWindow.hpp  CView.hpp  ICrudView.hpp
src/: main.cpp
src/model/: CBillsModel.cpp  CCustomersModel.cpp
src/view/: CBillsView.cpp  CCCustomersView.cpp  CCustomersView.cpp  CMainWindow.cpp  CView.cpp
tests/unit_tests/: CBillsModelTest.cpp  CCustomersModelTest.cpp  main.cpp
